added jquery to script file

--- a/index.html
+++ b/index.html
@@ -30,51 +30,51 @@
     </header>
     <div class="container">
         <div class="d-flex flex-row">
-            <div id="nineAm" class="p-2 time">09AM</div>
+            <section id="0" class="p-2 time"></section>
             <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
-            <button class="p-2 save" type="button"><i class="far fa-save"></i></button>
+            <button class="p-2 flex-shrink-1 save" type="button"><i class="far fa-save"></i></button>
         </div>
         <div class="d-flex flex-row">
-          <div id="tenAm" class="p-2 time">10AM</div>
+          <section id="1" class="p-2 time"></section>
+          <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
+          <button class="p-2 flex-shrink-1 save" type="button"><i class="far fa-save"></i></button>
+        </div>
+        <div class="d-flex flex-row">
+          <section id="2" class="p-2 time"></section>
           <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
           <button class="p-2 save" type="button"><i class="far fa-save"></i></button>
         </div>
         <div class="d-flex flex-row">
-          <div id="elevenAm" class="p-2 time">11AM</div>
+          <section id="3" class="p-2 time"></section>
           <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
           <button class="p-2 save" type="button"><i class="far fa-save"></i></button>
         </div>
         <div class="d-flex flex-row">
-          <div id="twelvePm" class="p-2 time">12PM</div>
+          <section id="4" class="p-2 time"></section>
           <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
           <button class="p-2 save" type="button"><i class="far fa-save"></i></button>
         </div>
         <div class="d-flex flex-row">
-          <div id="onePm" class="p-2 time">01PM</div>
+          <section id="5" class="p-2 time"></section>
           <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
           <button class="p-2 save" type="button"><i class="far fa-save"></i></button>
         </div>
         <div class="d-flex flex-row">
-          <div id="twoPm" class="p-2 time">02PM</div>
+          <section id="6" class="p-2 time"></section>
           <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
           <button class="p-2 save" type="button"><i class="far fa-save"></i></button>
         </div>
         <div class="d-flex flex-row">
-          <div id="threePm" class="p-2 time">03PM</div>
-          <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
-          <button class="p-2 save" type="button"><i class="far fa-save"></i></button>
-        </div>
-        <div class="d-flex flex-row">
-          <div id="fourPm" class="p-2 time">04PM</div>
+          <section id="7" class="p-2 time"></section>
           <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
           <button class="p-2 save" type="button"><i class="far fa-save"></i></button>
         </div>
         <div class="d-flex flex-row lastRow">
-          <div id="fivePm" class="p-2 time">05PM</div>
+          <section id="8" class="p-2 time"></section>
           <input class="p-8 flex-grow-1 bd-highlight task" type="text"></input>
           <button class="p-2 save" type="button"><i class="far fa-save"></i></button>
         </div>
-    </div>
+      </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
